--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -1893,7 +1893,8 @@ Tutorial A,Tuesday,09:00,1-12,120,EZONE 1.24
     REMOVE_FACILITATORS_TEMPLATE: "{{ url_for('unitcoordinator.remove_unit_facilitators', unit_id=0) }}",
     UPLOAD_SESSIONS_TEMPLATE: "{{ url_for('unitcoordinator.upload_sessions_csv', unit_id=0) }}",
     LIST_FACILITATORS_TEMPLATE: "{{ url_for('unitcoordinator.list_facilitators', unit_id=0) }}",
-    UPLOAD_CAS_TEMPLATE: "{{ url_for('unitcoordinator.upload_cas_csv', unit_id=0) }}"
+    UPLOAD_CAS_TEMPLATE: "{{ url_for('unitcoordinator.upload_cas_csv', unit_id=0) }}",
+    AUTO_ASSIGN_TEMPLATE: "{{ url_for('unitcoordinator.auto_assign_facilitators', unit_id=0) }}"
   };
   window.CSRF_TOKEN = "{{ csrf_token() }}";
 
