--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -2278,6 +2278,41 @@ Tutorial A,Tuesday,09:00,1-12,120,EZONE 1.24
   </div>
 </div>
 
+<!-- Facilitator Selection Modal -->
+<div id="facilitator-modal" class="modal-overlay" style="display: none;">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h3>Assign Facilitator</h3>
+      <button class="modal-close" id="facilitator-modal-close" onclick="closeFacilitatorModal()">
+        <span class="material-icons">close</span>
+      </button>
+    </div>
+    
+    <div class="modal-body">
+      <div class="session-info">
+        <h4 id="modal-session-name">Session Name</h4>
+        <p id="modal-session-time">Time: TBA</p>
+        <p id="modal-session-location">Location: TBA</p>
+      </div>
+      
+      <div class="facilitator-search">
+        <input type="text" id="facilitator-search" placeholder="Search facilitators..." class="search-input">
+      </div>
+      
+      <div class="facilitator-list-container">
+        <div id="facilitator-list" class="facilitator-list">
+          <!-- Facilitators will be loaded here -->
+        </div>
+      </div>
+    </div>
+    
+    <div class="modal-footer">
+      <button class="btn-secondary" id="facilitator-modal-cancel" onclick="closeFacilitatorModal()">Cancel</button>
+      <button class="btn-primary" onclick="selectMultipleFacilitators()" id="facilitator-modal-select" disabled>Assign Selected</button>
+    </div>
+  </div>
+</div>
+
 <!-- External JS -->
 <script src="{{ url_for('static', filename='js/uc.js') }}"></script>
 <script src="{{ url_for('static', filename='js/facilitator_review.js') }}"></script>
